examples/type_errors/duplicate_fields.roto
type Foo { a: U32, a: U32 } // should error here

filter foo {
	define {
		rx msg: U32;
		a = Foo { };
	}
}
